
[12/02/2021]
# Add API de contagem de conteúdos desbloqueados pela Extensão;
# Remoção de todas CDN's da extensão e todos arquivos estão sendo carregados localmente;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.7 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[19/02/2021]
# Adicionado Revista Época;

[25/02/2021]
# Adicionado Revista Época definitivo no CRX;
# FIXED BUG não mostra imagem notícia Revista Época;
# FIXED BUG não mostra imagem notícia Gazeta do Povo;

[31/03/2021]
# Ajuste Header Responde Aí - Exclui apenas botões de login;
# FIXED BUG Responde Aí - Mostra tela de Conteúdo Exclusivo;

[01/04/2021]
# Adicionado Revista Galileu;
# Adicionado Revista Época Negocios;
# Adicionado Revista Marie Claire;
# Adicionado Globo Rural;
# Adicionado Auto Esporte;
# Adicionado Pequenas Empresas e Grandes Negocios
# CRX atualizado;

[06/04/2021]
# Adicionado Conteudo Desbloqueado Responde Aí Login;
# Responde Aí FINAL BUILD;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.8 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[28/04/2021]
# Add incrementaConteudoAPI() sites globo celular;
# Adicionado JOTA;
# Adicionado NSC Total;

[18/05/2021]
# Adicionado New York Times;
# Adicionado El País Brasil;
# Correção Imports CDN's Internet Lenta;

[24/05/2021]
# Adicionado Jornal VS;

[01/06/2021]
# Adicionado Valor Economico BETA;
# Correção API's Valor Economico;
# Correção Sweet Alert bug;

[03/06/2021]
# Valor Econômico FINAL BUILD;
# Aumentado tempo de timeout requests API para conexões lentas;
# Refatoração código Valor Econômico;
# Melhoria de performance Valor Econômico;
# CRX atualizado;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.9 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[11/06/2021]
# Adicionado GauchaZH;
# Correção de Bug Multiplos Request GauchaZH;

[13/06/201]
# FIXED BUG Multiplos requests GauchZH - Mobile;
# GauchaZH Full Unlocked;

[21/06/2021]
# Adicionado Jornal do Comercio;
# Refatoração e otimização código GauchaZH;
# FIXED BUG no refresh page GauchaZH;
# FIXED ALL BUGS GauchaZH;
# Adicionado The Economist;